--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-table td{
-  /* border: #000 solid 1px; */
-  border-bottom: 1px solid #000;
-  padding: 5px;
-}*,
+*,
 *::before,
 *::after {
   box-sizing: border-box;
